# write

./: .gitignore  CLAUDE.md  README.md  biome.json  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
src/: app.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: command-palette.tsx  debug-panel.tsx  editor.test.ts  editor.tsx  empty-state.tsx  modal.tsx  settings-popover.tsx  sidebar.tsx  update-prompt.tsx  workspace-switcher.tsx
src/hooks/: use-files.ts  use-settings.test.ts  use-settings.ts  use-updater.ts  use-workspaces.ts
src/stores/: notes-store.test.ts  notes-store.ts
src/test/: setup.ts
